chore: fix issue with gapcursor

--- a/projects/demo/src/app/app.component.css
+++ b/projects/demo/src/app/app.component.css
@@ -15,3 +15,7 @@
   padding-left: 1rem;
   list-style: initial !important;
 }
+
+.ProseMirror .ProseMirror-gapcursor {
+  bottom: 0;
+}
